<resources>
    <string name="app_name">Meteorite Landings</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="nasa_url">https://data.nasa.gov/resource/y77d-th95.json?$$app_token=AI1HI30yud6vDFd7S1i0ylUFz</string>
    <string name="up_to_date">Meteorite Landings is up to date</string>
    <string name="grams">\u0020grams</string>
    <string name="toast_not_internet">Please, control your internet connection</string>
    <string name="details">Details</string>
    <string name="name">name</string>
    <string name="year">year</string>
    <string name="mass">mass</string>
    <string name="type">type</string>
    <string name="id">id</string>
    <string name="nametype">nametype</string>
    <string name="reclat">reclat</string>
    <string name="reclong">reclong</string>
    <string name="recclass">recclass</string>
    <string name="fall">fall</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="toast_first_start_no_internet">Please, control your internet connection and then click on refresh</string>
</resources>
